--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-title: Vinod Jaiswal, Software Engineer
+title: Vinod Jaiswal 
+Software Engineer
 description: vinod-jaiswal18.github.io
 google_analytics: vinod jaiswal, vinod, jaiswal, vinod-jaiswal18, vj
 show_downloads: false
