--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 title: Vinod Jaiswal 
-Software Engineer
-description: vinod-jaiswal18.github.io
+description: Software Engineer
 google_analytics: vinod jaiswal, vinod, jaiswal, vinod-jaiswal18, vj
-show_downloads: false
+show_downloads: true
 theme: jekyll-theme-cayman
 
 gems:
