--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Vinod Jaiswal 
 description: Software Engineer
-google_analytics: vinod jaiswal, vinod, jaiswal, vinod-jaiswal18, vj
-show_downloads: true
+google_analytics: jpos, vinod jaiswal, vinod, jaiswal, vinod-jaiswal18, vj
+show_downloads: false
 theme: jekyll-theme-cayman
 
 gems:
