--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Vinod Jaiswal 
 description: Software Engineer
-google_analytics: vinod jaiswal, vinod, jaiswal, vinod-jaiswal18, vj
+google_analytics: jpos, vinod jaiswal, vinod, jaiswal, vinod-jaiswal18, vj
 show_downloads: true
 theme: jekyll-theme-cayman
 
