Changes for technologies

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Vinod Jaiswal 
 description: Software Engineer
-google_analytics: jpos, vinod jaiswal, vinod, jaiswal, vinod-jaiswal18, vj
+google_analytics: jpos, vinod jaiswal, vinod, jaiswal, vinod-jaiswal18, vj, java
 show_downloads: false
 theme: jekyll-theme-cayman
 
