--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Vinod Jaiswal 
-description: Technologist | Technical Lead | Software Developer | Software Engineer
+description: Technologist | Software Engineer
 google_analytics: jpos, vinod jaiswal, vinod, jaiswal, vinod-jaiswal18, vj, java
 show_downloads: false
 theme: jekyll-theme-cayman
