Updated descriptions and details

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Vinod Jaiswal 
-description: Technologist | Software Engineer
-google_analytics: jpos, vinod jaiswal, vinod, jaiswal, vinod-jaiswal18, vj, java
+title: Vinod Jaiswal
+description: Technologist | Engineering Manager | Software Architect
+google_analytics: jpos, vinod jaiswal, vinod, jaiswal, vinod-jaiswal18, vj, java, payment switch
 show_downloads: false
 theme: jekyll-theme-cayman
 
